# swagger.json
@@ -318,6 +318,14 @@
                   "items": {
                     "type": "number"
                   }
+                },
+                "cover_url": {
+                  "type": "string",
+                  "example": "text"
+                },
+                "file_url": {
+                  "type": "string",
+                  "example": "text"
                 }
               }
             }
@@ -394,6 +402,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
           },
@@ -451,6 +462,14 @@
                   "items": {
                     "type": "number"
                   }
+                },
+                "cover_url": {
+                  "type": "string",
+                  "example": "text"
+                },
+                "file_url": {
+                  "type": "string",
+                  "example": "text"
                 }
               }
             }
@@ -471,6 +490,9 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
